<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/android_sensors"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/accelerometer"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="107dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="137dp" />


    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="135dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/gyroscope"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="137dp" />


    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="135dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/megnetometer"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="137dp" />


    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="135dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/z_axis"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/LIGHT"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="167dp" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/_545"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#252525"
        android:text="@string/developed_by_saksham_tomar_n_student_of_gla_university_mathura"
        android:textStyle="italic"






















